<resources>
    <string name="app_name">Calculator</string>
    <string name="app_version">21.07.06-alpha</string>
    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="funcC">C</string>
    <string name="funcRoot">√</string>
    <string name="funcDecimal">.</string>
    <string name="funcPercent">%</string>
    <string name="funcDivision">÷</string>
    <string name="funcMultiplication">×</string>
    <string name="funcSubtraction">-</string>
    <string name="funcAddition">+</string>
    <string name="funcEquals">=</string>
</resources>